--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -38,6 +38,11 @@
     	letter-spacing: 5px;
     	font-size: 26px;
     }
+
+    @media screen and (max-width: 370px) {
+    	letter-spacing: 2px;
+    	font-size: 20px;
+    }
 }
 
 nav ul {
